test/conformance/chainsaw/mutate/e2e/variables-in-keys/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: structured-logs-sidecar
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
