test/conformance/chainsaw/mutate/e2e/variables-in-keys/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: variables-in-keys
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: structured-logs-sidecar
  - name: step-02
    try:
    - apply:
        file: resource.yaml
    - assert:
        file: resource-mutated.yaml
